--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div id="home">
 			<!-- navigation section -->
 			<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-				<a id="title" href="https://www.facebook.com/urubopuertomadero" target="_blank" class="navbar-brand"><img class="mr-3 ml-1" src="./static/resources/logo.jpg">Puerto Madero<span> Urubó</span></a>
+				<a id="title" href="https://www.facebook.com/urubopuertomadero" target="_blank" class="navbar-brand"><img class="mr-3 ml-1" src="./static/Sources/logo.jpg">Puerto Madero<span> Urubó</span></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -43,8 +43,8 @@
 			</nav>
 			<!-- start landing page section -->
 			<div class="banner">
-				<video autoplay muted loop id="videoBG" poster="./static/resources/inicioHome.jpg">
-					<source src="./static/resources/animation1.mp4" type="video/mp4">
+				<video autoplay muted loop id="videoBG" poster="./static/Sources/inicioHome.jpg">
+					<source src="./static/Sources/animation1.mp4" type="video/mp4">
 				</video>
 			</div>
 
@@ -67,8 +67,8 @@
 						<div id="promo-underline" class="heading-underline"></div>
 					</div>
 					<div id="picPromo" class="col-md-12 narrow text-center">
-						<video autoplay muted loop class="ImgPromo" poster="./static/resources/posterNavidad.jpg">
-							<source src="./static/resources/videoNavidad.3gpp" type="video/3gpp">
+						<video autoplay muted loop class="ImgPromo" poster="./static/Sources/posterNavidad.jpg">
+							<source src="./static/Sources/videoNavidad.3gpp" type="video/3gpp">
 						</video>
 					</div>
 					<div class="col-md-12 narrow text-center">
@@ -100,48 +100,48 @@
 					<div class="row text-center">
 						<div class="col-md-4">
 							<div class="feature">
-								<video autoplay muted loop poster="./static/resources/Features/EcoResort.jpeg">
-									<source src="./static/resources/Features/EcoResort.mp4" type="video/mp4">
+								<video autoplay muted loop poster="./static/Sources/Features/EcoResort.jpeg">
+									<source src="./static/Sources/Features/EcoResort.mp4" type="video/mp4">
 								</video>
 								<h3>Eco Resort</h3>
 							</div>
 						</div>
 						<div class="col-md-4">
 							<div class="feature">
-								<video autoplay muted loop poster="./static/resources/Features/polo.jpeg">
-									<source src="./static/resources/Features/polo.mp4" type="video/mp4">
+								<video autoplay muted loop poster="./static/Sources/Features/polo.jpeg">
+									<source src="./static/Sources/Features/polo.mp4" type="video/mp4">
 								</video>
 								<h3>Club de Polo</h3>
 							</div>
 						</div> 
 						<div class="col-md-4">
 							<div class="feature">
-								<video autoplay muted loop poster="./static/resources/Features/inmobiliario.jpeg">
-									<source src="./static/resources/Features/inmobiliarios.mp4" type="video/mp4">
+								<video autoplay muted loop poster="./static/Sources/Features/inmobiliario.jpeg">
+									<source src="./static/Sources/Features/inmobiliarios.mp4" type="video/mp4">
 								</video>
 								<h3>Proyectos Inmobiliarios</h3>
 							</div>
 						</div>
 						<div class="col-md-4">
 							<div class="feature">
-								<video autoplay muted loop poster="./static/resources/Features/ciclovias.jpg">
-									<source src="./static/resources/Features/ciclovias.mp4" type="video/mp4">
+								<video autoplay muted loop poster="./static/Sources/Features/ciclovias.jpg">
+									<source src="./static/Sources/Features/ciclovias.mp4" type="video/mp4">
 								</video>
 								<h3>Ciclovías</h3>
 							</div>
 						</div>
 						<div class="col-md-4">
 							<div class="feature">
-								<video autoplay muted loop poster="./static/resources/Features/areasverdes.jpg">
-										<source src="./static/resources/Features/areasverdes.mp4" type="video/mp4">
+								<video autoplay muted loop poster="./static/Sources/Features/areasverdes.jpg">
+										<source src="./static/Sources/Features/areasverdes.mp4" type="video/mp4">
 								</video>
 								<h3>Areas Verdes</h3>
 							</div>
 						</div>
 						<div class="col-md-4">
 							<div class="feature">
-								<video autoplay muted loop poster="./static/resources/Features/asfaltado.jpg">
-										<source src="./static/resources/Features/asfaltado.mp4" type="video/mp4">
+								<video autoplay muted loop poster="./static/Sources/Features/asfaltado.jpg">
+										<source src="./static/Sources/Features/asfaltado.mp4" type="video/mp4">
 								</video>
 								<h3>Asfaltado</h3>
 							</div>
@@ -181,7 +181,7 @@
 					</div>
 				</div>
 				<div class="fixed-wrap">
-					<div class="fixed" style="background-image: url(./static/resources/fondoFeatures.jpeg);">
+					<div class="fixed" style="background-image: url(./static/Sources/fondoFeatures.jpeg);">
 
 					</div>
 				</div>
@@ -202,7 +202,7 @@
 					<div class="col-md-6 clients">
 						<div class="row">
 							<div class="col-md-4">
-								<img src="./static/resources/Clients/Cecilia.jpg">
+								<img src="./static/Sources/Clients/Cecilia.jpg">
 							</div>
 							<div class="col-md-8">
 								<blockquote>
@@ -217,7 +217,7 @@
 					<div class="col-md-6 clients">
 						<div class="row">
 							<div class="col-md-4">
-								<img src="./static/resources/Clients/Jenny.jpg">
+								<img src="./static/Sources/Clients/Jenny.jpg">
 							</div>
 							<div class="col-md-8">
 								<blockquote>
@@ -244,7 +244,7 @@
 			<footer>
 				<div class="row justify-content-center">
 					<div class="col-md-12 text-center">
-						<a id="brand-footer" href="#"><img id="ImgFooter" class="mr-3" src="./static/resources/logo.jpg">Puerto Madero Urubó</a>
+						<a id="brand-footer" href="#"><img id="ImgFooter" class="mr-3" src="./static/Sources/logo.jpg">Puerto Madero Urubó</a>
 					</div>
 					<div class="col-md-12 text-center">
 						<a href="https://www.facebook.com/urubopuertomadero" target="_blank"><i style="font-size: 2.3rem !important;" class="fab fa-facebook-square"></i></a>
