--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
 		<!--- Script Source Files -->
 		<script>
 			var person = Math.floor(Math.random() * 3) + 1;
+			console.log("Person is:", person);
 			if(person == 1){
 				var link = "www.google.com"
 			}
