--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
 
 			}
 			console.log("Link:", link)
-			var Btn1 = document.getElementById("#contactBtn1")
-			var Btn2 = document.getElementById("#contactBtn2")
+			var Btn1 = document.getElementById("contactBtn1")
+			var Btn2 = document.getElementById("contactBtn2")
 			Btn1.setAttribute("href", link)
 			Btn2.setAttribute("href", link)
 			console.log("Buttons Href has changed!")
