--- a/index.html
+++ b/index.html
@@ -261,13 +261,13 @@
 			var person = Math.floor(Math.random() * 3) + 1;
 			console.log("Person is:", person);
 			if(person == 1){
-				var link = "www.google.com"
+				var link = "https://www.google.com/"
 			}
 			else if(person == 2){
-				var link = "www.youtube.com"
+				var link = "https://www.youtube.com/"
 			}
 			else if(person == 3){
-				var link = "www.twitter.com"
+				var link = "https://www.twitter.com/"
 
 			}
 			console.log("Link:", link)
