--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					<div class="row text-center">
 						<div class="col-md-4">
 							<div class="feature">
-								<video autoplay muted loop poster="./static/Sources/Features/EcoResort.png">
+								<video autoplay muted loop poster="./static/Sources/Features/EcoResort.jpg">
 									<source src="./static/Sources/Features/EcoResort.mp4" type="video/mp4">
 								</video>
 								<h3>Eco Resort</h3>
@@ -108,7 +108,7 @@
 						</div>
 						<div class="col-md-4">
 							<div class="feature">
-								<video autoplay muted loop poster="./static/Sources/Features/polo.jpeg">
+								<video autoplay muted loop poster="./static/Sources/Features/polo.jpg">
 									<source src="./static/Sources/Features/polo.mp4" type="video/mp4">
 								</video>
 								<h3>Club de Polo</h3>
@@ -116,7 +116,7 @@
 						</div> 
 						<div class="col-md-4">
 							<div class="feature">
-								<video autoplay muted loop poster="./static/Sources/Features/inmobiliario.jpeg">
+								<video autoplay muted loop poster="./static/Sources/Features/inmobiliario.jpg">
 									<source src="./static/Sources/Features/inmobiliarios.mp4" type="video/mp4">
 								</video>
 								<h3>Proyectos Inmobiliarios</h3>
