--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="./static/bootstrap-4.1.3-dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="./static/css/style.css">
 		<link rel="stylesheet" href="./static/css/fixed.css">
-		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
 	<body data-spy="scroll" data-target="#navbarResponsive">
 		<!-- START HOME SECTION -->
