--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body data-spy="scroll" data-target="#navbarResponsive">
 		<!-- START HOME SECTION -->
-		<div id="home" class="offset">
+		<div id="home" style="margin-top:4rem !important;">
 			<!-- navigation section -->
 			<nav class="navbar navbar-expand-xl navbar-dark bg-dark fixed-top">
 				<a id="title" href="https://www.facebook.com/urubopuertomadero" target="_blank" class="navbar-brand"><img class="mr-3 ml-1" src="./static/Sources/logo.jpg">Puerto Madero<span> Urubó</span></a>
