--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body data-spy="scroll" data-target="#navbarResponsive">
 		<!-- START HOME SECTION -->
-		<div id="home" style="margin-bottom:4rem !important;">
+		<div id="home">
 			<!-- navigation section -->
 			<nav class="navbar navbar-expand-xl navbar-dark bg-dark fixed-top">
 				<a id="title" href="https://www.facebook.com/urubopuertomadero" target="_blank" class="navbar-brand"><img class="mr-3 ml-1" src="./static/Sources/logo.jpg">Puerto Madero<span> Urubó</span></a>
@@ -43,7 +43,7 @@
 			</nav>
 			<!-- start landing page section -->
 			<div class="banner">
-				<video autoplay muted loop id="videoBG" poster="./static/Sources/inicioHome.jpg">
+				<video style="margin-bottom:4rem !important;" autoplay muted loop id="videoBG" poster="./static/Sources/inicioHome.jpg">
 					<source src="./static/Sources/animation1.mp4" type="video/mp4">
 				</video>
 			</div>
