--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</div>
 			</nav>
 			<!-- start landing page section -->
-			<div class="banner" style="margin-bottom:4rem !important;">
+			<div class="banner" style="margin-top:4rem !important;">
 				<video autoplay muted loop id="videoBG" poster="./static/Sources/inicioHome.jpg">
 					<source src="./static/Sources/animation1.mp4" type="video/mp4">
 				</video>
