--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					</div>
 					<div id="picPromo" class="col-md-12 narrow text-center">
 						<video autoplay muted loop class="ImgPromo" poster="./static/Sources/posterNavidad.jpg">
-							<source src="./static/Sources/videoNavidad.3gpp" type="video/3gpp">
+							<source src="./static/Sources/videoNavidad.mp4" type="video/mp4">
 						</video>
 					</div>
 					<div class="col-md-12 narrow text-center">
