--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
 
 			}
 			console.log("Link:", link)
+			document.querySelectorAll("video").controls = false;
 			var Btn1 = document.getElementById("contactBtn1")
 			var Btn2 = document.getElementById("contactBtn2")
 			Btn1.setAttribute("href", link)
