--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			</nav>
 			<!-- start landing page section -->
 			<div class="banner">
-				<video autoplay muted loop id="videoBG" controls="false" poster="./static/Sources/inicioHome.jpg">
+				<video autoplay muted loop id="videoBG" poster="./static/Sources/inicioHome.jpg">
 					<source src="./static/Sources/animation1.mp4" type="video/mp4">
 				</video>
 			</div>
@@ -100,7 +100,7 @@
 					<div class="row text-center">
 						<div class="col-md-4">
 							<div class="feature">
-								<video autoplay muted loop controls="false" poster="./static/Sources/Features/EcoResort.jpg">
+								<video autoplay muted loop poster="./static/Sources/Features/EcoResort.jpg">
 									<source src="./static/Sources/Features/EcoResort.mp4" type="video/mp4">
 								</video>
 								<h3>Eco Resort</h3>
@@ -108,7 +108,7 @@
 						</div>
 						<div class="col-md-4">
 							<div class="feature">
-								<video autoplay muted loop controls="false" poster="./static/Sources/Features/polo.jpg">
+								<video autoplay muted loop poster="./static/Sources/Features/polo.jpg">
 									<source src="./static/Sources/Features/polo.mp4" type="video/mp4">
 								</video>
 								<h3>Club de Polo</h3>
@@ -116,7 +116,7 @@
 						</div> 
 						<div class="col-md-4">
 							<div class="feature">
-								<video autoplay muted loop controls="false" poster="./static/Sources/Features/inmobiliario.jpg">
+								<video autoplay muted loop poster="./static/Sources/Features/inmobiliario.jpg">
 									<source src="./static/Sources/Features/inmobiliarios.mp4" type="video/mp4">
 								</video>
 								<h3>Proyectos Inmobiliarios</h3>
@@ -124,7 +124,7 @@
 						</div>
 						<div class="col-md-4">
 							<div class="feature">
-								<video autoplay muted loop controls="false" poster="./static/Sources/Features/ciclovias.jpg">
+								<video autoplay muted loop poster="./static/Sources/Features/ciclovias.jpg">
 									<source src="./static/Sources/Features/ciclovias.mp4" type="video/mp4">
 								</video>
 								<h3>Ciclovías</h3>
@@ -132,7 +132,7 @@
 						</div>
 						<div class="col-md-4">
 							<div class="feature">
-								<video autoplay muted loop controls="false" poster="./static/Sources/Features/areasverdes.jpg">
+								<video autoplay muted loop poster="./static/Sources/Features/areasverdes.jpg">
 										<source src="./static/Sources/Features/areasverdes.mp4" type="video/mp4">
 								</video>
 								<h3>Areas Verdes</h3>
@@ -140,7 +140,7 @@
 						</div>
 						<div class="col-md-4">
 							<div class="feature">
-								<video autoplay muted loop controls="false" poster="./static/Sources/Features/asfaltado.jpg">
+								<video autoplay muted loop poster="./static/Sources/Features/asfaltado.jpg">
 										<source src="./static/Sources/Features/asfaltado.mp4" type="video/mp4">
 								</video>
 								<h3>Asfaltado</h3>
