--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			</nav>
 			<!-- start landing page section -->
 			<div class="banner">
-				<video style="-webkit-media-controls-start-playback-button {display: none !important; -webkit-appearance: none;}" playsinline autoplay muted loop id="videoBG" poster="./static/Sources/inicioHome.jpg">
+				<video autobuffer autoplay muted playsinline loop id="videoBG" poster="./static/Sources/inicioHome.jpg">
 					<source src="./static/Sources/animation1.mp4" type="video/mp4">
 				</video>
 			</div>
