--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					<div class="row text-center">
 						<div class="col-md-4">
 							<div class="feature">
-								<video autoplay muted playsinline loop poster="./static/Sources/Features/EcoResort.jpg">
+								<video autobuffer autoplay muted playsinline loop poster="./static/Sources/Features/EcoResort.jpg">
 									<source src="./static/Sources/Features/EcoResort.mp4" type="video/mp4">
 								</video>
 								<h3>Eco Resort</h3>
