--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
 		<!-- START COURSE SECTION -->
-		<div id="Promoción" style="margin-top: 0 !important">
+		<div id="Promoción" class="offset">
 			<div class="fixed-background">
 				<div class="row">
 					<div id="titlePromo" class="col-12 narrow text-center">
