--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body data-spy="scroll" data-target="#navbarResponsive">
 		<!-- START HOME SECTION -->
-		<div id="home" style="padding-top: 4rem !important;">
+		<div id="home">
 			<!-- navigation section -->
 			<nav class="navbar navbar-expand-xl navbar-dark bg-dark fixed-top">
 				<a id="title" href="https://www.facebook.com/urubopuertomadero" target="_blank" class="navbar-brand"><img class="mr-3 ml-1" src="./static/Sources/logo.jpg"><span id="puertomadero-brand">Puerto Madero</span><span id="urubo-brand"> Urubó</span></a>
