--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Puerto Madero Urubó</title>
+		<link rel="shortcut icon" type="image/png" href="./static/Sources/favicon.png">
 		<link rel="stylesheet" href="./static/bootstrap-4.1.3-dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="./static/css/style.css">
 		<link rel="stylesheet" href="./static/css/fixed.css">
