--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 					<div class="col-md-12 text-center">
 						<a id="brand-footer" href="#"><img id="ImgFooter" class="mr-3" src="./static/Sources/logo.jpg">Puerto Madero Urubó</a>
 					</div>
-					<div class="col-md-12 text-center">
+					<div class="col-md-12 text-center" style="padding-bottom: 0 !important">
 						<a href="https://www.facebook.com/urubopuertomadero" target="_blank"><i style="font-size: 2.3rem !important;" class="fab fa-facebook-square"></i></a>
 						<p>!Visitanos en Facebook!</p>
 						<p><i style="font-size: 1rem !important;" class="fas fa-envelope-open-text mr-2"></i>puertomaderourubo@gmail.com</p>
