--- a/index.html
+++ b/index.html
@@ -244,14 +244,14 @@
 		<div id="Contacto" class="offset">
 			<footer>
 				<div class="row justify-content-center">
-					<div class="col-md-12 text-center">
+					<div class="col-md-12 text-center" style="padding-top: 0 !important;">
 						<a id="brand-footer" href="#"><img id="ImgFooter" class="mr-3" src="./static/Sources/logo.jpg">Puerto Madero Urubó</a>
 					</div>
-					<div class="col-md-12 text-center" style="padding-bottom: 0 !important">
+					<div class="col-md-12 text-center" style="padding-bottom: 0 !important;">
 						<a href="https://www.facebook.com/urubopuertomadero" target="_blank"><i style="font-size: 2.3rem !important;" class="fab fa-facebook-square"></i></a>
 						<p>!Visitanos en Facebook!</p>
 						<p><i style="font-size: 1rem !important;" class="fas fa-envelope-open-text mr-2"></i>puertomaderourubo@gmail.com</p>
-						<p><i style="font-size: 1rem !important;" class="fas fa-map-marker-alt mr-2"></i>Avenida San Martín, Calle Tucuman<br>6 oeste #2 Santa Cruz de la Sierra, Bolivia</p>
+						<p style="margin: 0 !important;"><i style="font-size: 1rem !important;" class="fas fa-map-marker-alt mr-2"></i>Avenida San Martín, Calle Tucuman<br>6 oeste #2 Santa Cruz de la Sierra, Bolivia</p>
 					</div>
 					<hr class="socket">
 					&copy; Hecho por Mathias Mendoza.
