--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						</video>
 					</div>
 					<div class="col-md-12 narrow text-center">
-						<a href="https://www.twitter.com/" id="contactBtn1" class="btn btn-secondary btn-md" target="_blank">Contactar un Asesor <i class="fas fa-mobile ml-2"></i></a>
+						<a href="https://www.twitter.com/" id="contactBtn1" class="btn btn-secondary btn-md" target="_blank">Contactar un Asesor <i class="fab fa-whatsapp ml-2"></i></a>
 					</div>
 				</div>
 				<div class="fixed-wrap">
@@ -233,8 +233,8 @@
 				</div>
 			</div>
 			<div class="col-md-12 narrow text-center">
-				<p style="font-size: 1.6rem !important;" class="lead">Quieres contactarte con un asesor?</p>
-				<a href="https://www.twitter.com/" id="contactBtn2" class="btn btn-secondary btn-md" target="_blank">Contactar un Asesor <i class="fas fa-mobile ml-2"></i></a>
+				<p style="font-size: 1.45rem !important;" class="lead">Quieres contactarte con un asesor?</p>
+				<a href="https://www.twitter.com/" id="contactBtn2" class="btn btn-secondary btn-md" target="_blank">Contactar un Asesor <i class="fab fa-whatsapp ml-2"></i></a>
 			</div>
 		</div>
 
