--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						</video>
 					</div>
 					<div class="col-md-12 narrow text-center">
-						<a href="https://www.twitter.com/" id="contactBtn1" class="btn btn-secondary btn-md" target="_blank">Contactar un Asesor <i class="fab fa-whatsapp ml-2"></i></a>
+						<a href="https://wa.me/message/WGDDKQXZGDCEC1" id="contactBtn1" class="btn btn-secondary btn-md" target="_blank">Contactar un Asesor <i class="fab fa-whatsapp ml-2"></i></a>
 					</div>
 				</div>
 				<div class="fixed-wrap">
@@ -234,7 +234,7 @@
 			</div>
 			<div class="col-md-12 narrow text-center">
 				<p style="font-size: 1.45rem !important;" class="lead">Quieres contactarte con un asesor?</p>
-				<a href="https://www.twitter.com/" id="contactBtn2" class="btn btn-secondary btn-md" target="_blank">Contactar un Asesor <i class="fab fa-whatsapp ml-2"></i></a>
+				<a href="https://wa.me/message/WGDDKQXZGDCEC1" id="contactBtn2" class="btn btn-secondary btn-md" target="_blank">Contactar un Asesor <i class="fab fa-whatsapp ml-2"></i></a>
 			</div>
 		</div>
 
@@ -261,25 +261,6 @@
 		
 		<!--- Script Source Files -->
 		<script>
-			var person = Math.floor(Math.random() * 3) + 1;
-			console.log("Person is:", person);
-			if(person == 1){
-				var link = "https://www.google.com/"
-			}
-			else if(person == 2){
-				var link = "https://www.youtube.com/"
-			}
-			else if(person == 3){
-				var link = "https://www.twitter.com/"
-
-			}
-			console.log("Link:", link)
-			var Btn1 = document.getElementById("contactBtn1")
-			var Btn2 = document.getElementById("contactBtn2")
-			Btn1.setAttribute("href", link)
-			Btn2.setAttribute("href", link)
-			console.log("Buttons Href has changed!")
-			
 			$('.navbar-collapse a').click(function(){
 				setTimeout(function(){
 					$(".navbar-collapse").collapse('hide');
