--- a/index.html
+++ b/index.html
@@ -264,13 +264,16 @@
 			var person = Math.floor(Math.random() * 3) + 1;
 			console.log("Person is:", person);
 			if(person == 1){
-				var Michelle = "https://wa.me/message/WGDDKQXZGDCEC1"
+				var link = "https://wa.me/message/WGDDKQXZGDCEC1"
+				console.log("Michelle")
 			}
 			else if(person == 2){
-				var Gabriela = "https://bit.ly/3nDftoY"
+				var link = "https://bit.ly/3nDftoY"
+				console.log("Gabriela")
 			}
 			else if(person == 3){
-				var Yhoselin = "https://wa.me/message/WXZXROOUJCEWL1"
+				var link = "https://wa.me/message/WXZXROOUJCEWL1"
+				console.log("Yhoselin")
 
 			}
 			console.log("Link:", link)
