--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					</div>
 				</div>
 				<div class="fixed-wrap">
-					<div class="christmas" style="background-image: url(./static/Sources/promoBackground.jpg);">
+					<div class="promoBackground" style="background-image: url(./static/Sources/promoBackground.jpg);">
 
 					</div>
 				</div>
