--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<div class="fixed-background">
 				<div class="row">
 					<div id="titlePromo" class="col-12 narrow text-center">
-						<h1 style="color: white !important; text-shadow: .55rem .55rem .8rem black;"><i style="margin-left: 5px; margin-right: 5px; color:  rgb(8, 48, 122);" class="fas fa-gift"></i>Promoción Enero<i style="margin-left: 5px; margin-right: 5px; color:  rgb(8, 48, 122);" class="fas fa-gift"></i></h1>
+						<h1 style="color: white !important; text-shadow: .55rem .55rem .8rem black;">Promoción Enero</h1>
 						<div id="promo-underline" class="heading-underline"></div>
 					</div>
 					<div id="picPromo" class="col-md-12 narrow text-center">
