--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<div class="row">
 					<div id="titlePromo" class="col-12 narrow text-center">
 						<h1 style="color: white !important; text-shadow: .55rem .55rem .8rem black;">Promoción Enero</h1>
-						<div id="promo-underline" class="heading-underline"></div>
+						<div style"color: #021b4b !important;" id="promo-underline" class="heading-underline"></div>
 					</div>
 					<div id="picPromo" class="col-md-12 narrow text-center">
 						<video autobuffer autoplay muted playsinline loop class="ImgPromo" poster="./static/Sources/posterPromoEnero.jpg">
