--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<div class="caption text-center">
 				<h1>Puerto Madero Urubó</h1>
 				<h3>Urbanización Ecológica En El Urubó</h3>
-				<a class="btn btn-secondary btn-md" href="#Promoción">¡Obtener Promoción!</a>
+				<a class="btn btn-lg btn-md" href="#Promoción">¡Obtener Promoción!</a>
 			</div>
 		</div>
 
