--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 						<a href="https://www.facebook.com/urubopuertomadero" target="_blank"><i style="font-size: 2.3rem !important;" class="fab fa-facebook-square"></i></a>
 						<p>!Visitanos en Facebook!</p>
 						<p><i style="font-size: 1rem !important;" class="fas fa-envelope-open-text mr-2"></i>puertomaderourubo@gmail.com</p>
-						<a id='officeGPS' href='https://goo.gl/maps/7oQWQhPoTj2UQW4BA' style="margin: 0 !important;"><i style="font-size: 1rem !important;" class="fas fa-map-marker-alt mr-2"></i>Avenida San Martín, Calle Tucuman<br>6 oeste #2 Santa Cruz de la Sierra, Bolivia</a>
+						<a id='officeGPS' href='https://goo.gl/maps/7oQWQhPoTj2UQW4BA' target='_blank' style="margin: 0 !important;"><i style="font-size: 1rem !important;" class="fas fa-map-marker-alt mr-2"></i>Avenida San Martín, Calle Tucuman<br>6 oeste #2 Santa Cruz de la Sierra, Bolivia</a>
 					</div>
 					<hr class="socket">
 					&copy; Hecho por Mathias Mendoza.
