--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
 						<div style"color: #021b4b !important;" id="promo-underline" class="heading-underline"></div>
 					</div>
 					<div id="picPromo" class="col-md-12 narrow text-center">
-						<video autobuffer autoplay muted playsinline loop class="ImgPromo" poster="./static/Sources/posterPromoFebrero.jpg">
-							<source src="./static/Sources/promoEnero.mp4" type="video/mp4">
-						</video>
+						<img class='imgPromo' src='./static/Sources/posterPromoFebrero.jpg'>
 					</div>
 					<div class="col-md-12 narrow text-center">
 						<a href="#" id="contactBtn1" class="btn btn-secondary btn-md" target="_blank">Contactar un Asesor <i class="fab fa-whatsapp ml-2"></i></a>
