--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					</div>
 				</div>
 				<div class="fixed-wrap">
-					<div class="promoBackground" style="background-image: url(./static/Sources/promoBackground.jpg);">
+					<div class="promoBackground" style="background-image: url(./static/Sources/promoFeatures.jpeg);">
 
 					</div>
 				</div>
