--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-12 narrow text-center" style='background-color: white; width: 100% padding:1.9rem; margin-bottom:0'>
+				<div class="col-md-12 narrow text-center" style='background-color: white; width: 100%; padding:1.9rem; margin-bottom:0;'>
 					<p style="font-size: 1.45rem !important;" class="lead">Quieres contactarte con un asesor?</p>
 					<a href="#" id="contactBtn2" class="btn btn-secondary btn-md" target="_blank">Contactar un Asesor <i class="fab fa-whatsapp ml-2"></i></a>
 				</div>
@@ -240,7 +240,7 @@
 
 		<!-- START CONTACT SECTION -->
 		<div id="Contacto" class="offset">
-			<footer style="margin-top:0">
+			<footer style="margin-top:0;">
 				<div class="row justify-content-center">
 					<div class="col-md-12 text-center" style="padding-top: 0 !important;">
 						<a id="brand-footer" href="#"><img id="ImgFooter" class="mr-3" src="./static/Sources/logo.jpg">Puerto Madero Urubó</a>
