--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 		<!-- END CLIENTS SECTION -->
 
 		<!-- START CONTACT SECTION -->
-		<div id="Contacto" class="offset" style="height:0 !important;">
+		<div id="Contacto" class="offset">
 			<footer style="margin-top:0;">
 				<div class="row justify-content-center">
 					<div class="col-md-12 text-center" style="padding-top: 0 !important;">
